--- a/.github/workflows/issuetranistion.yml
+++ b/.github/workflows/issuetranistion.yml
@@ -1,31 +1,37 @@
-name: PullRequest
-
+name: issue transition
+ 
 on:
   push:
-    branches: [ "Releases" ]
+    branches: [ "main" ]
+ 
   workflow_dispatch:
-
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+ 
     steps:
-      - uses: actions/checkout@v3
-
+      - name: Checkout code
+        uses: actions/checkout@v3
+ 
       - name: Run a one-line script
-        id: echo
         run: echo Hello, world!
-
-      - name: Transition Jira issue
-        if: ${{ steps.echo.outcome == 'success' }}
-        env:
-          JIRA_ISSUE_ID: CI-16805
-          JIRA_TRANSITION_ID: 71
-          JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
-          JIRA_EMAIL: ${{ secrets.JIRA_EMAIL }}
+ 
+      - name: Transition Jira Issue to Done
         run: |
-          curl -X POST \
-            -H "Content-Type: application/json" \
-            -H "Authorization: Basic $(echo -n $JIRA_EMAIL:$JIRA_API_TOKEN | base64)" \
-            -d '{"transition": {"id": "'$JIRA_TRANSITION_ID'"}}' \
-            "https://bhavyass.atlassian.net/rest/api/3/issue/$JIRA_ISSUE_ID/transitions"
+          if [[ "${{ github.event_name }}" == "push" && "${{ github.event.before }}" == "0000000000000000000000000000000000000000" ]]; then
+            JIRA_USERNAME: ${{ secrets.JIRA_EMAIL }}
+            JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
+            JIRA_ISSUE_KEY: "CI-16805"
+            JIRA_TRANSITION_ID: "71"
+ 
+            # Assuming the build is successful, transition the Jira issue to "Done"
+            # Add your logic to check if the build was successful (e.g., by checking exit codes or using GitHub Actions outputs)
+            if [[ "${{ job.status }}" == "success" ]]; then
+              curl -X POST \
+                -H "Content-Type: application/json" \
+                -u "$JIRA_USERNAME:$JIRA_API_TOKEN" \
+                --data '{"transition": {"id": "'$JIRA_TRANSITION_ID'"}}' \
+                "https://bhavyass.atlassian.net/rest/api/2/issue/$JIRA_ISSUE_KEY/transitions"
+            fi
+          fi
