--- a/.github/workflows/issuetranistion.yml
+++ b/.github/workflows/issuetranistion.yml
@@ -7,31 +7,27 @@ on:
   workflow_dispatch:
  
 jobs:
-  build:
+  jira-transition:
     runs-on: ubuntu-latest
- 
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
- 
-      - name: Run a one-line script
-        run: echo Hello, world!
- 
-      - name: Transition Jira Issue to Done
-        run: |
-          if [[ "${{ github.event_name }}" == "push" && "${{ github.event.before }}" == "0000000000000000000000000000000000000000" ]]; then
-            JIRA_USERNAME: ${{ secrets.JIRA_EMAIL }}
-            JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
-            JIRA_ISSUE_KEY: "CI-16805"
-            JIRA_TRANSITION_ID: "71"
- 
-            # Assuming the build is successful, transition the Jira issue to "Done"
-            # Add your logic to check if the build was successful (e.g., by checking exit codes or using GitHub Actions outputs)
-            if [[ "${{ job.status }}" == "success" ]]; then
-              curl -X POST \
-                -H "Content-Type: application/json" \
-                -u "$JIRA_USERNAME:$JIRA_API_TOKEN" \
-                --data '{"transition": {"id": "'$JIRA_TRANSITION_ID'"}}' \
-                "https://bhavyass.atlassian.net/rest/api/2/issue/$JIRA_ISSUE_KEY/transitions"
-            fi
-          fi
+    - name: Check out code
+      uses: actions/checkout@v2
+
+    - name: Echo hello world
+      run: echo "hello world"
+
+    - name: Transition issue in Jira
+      if: ${{ always() }}
+      env:
+        JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
+        JIRA_HOST: https://bhavyass.atlassian.net
+        JIRA_USERNAME: bhavyashrees@devtools.in
+      run: |
+        ISSUE_KEY="TS-11"
+        TRANSITION_ID="31"
+        curl -s -X POST \
+          -H "Authorization: Basic $(echo -n $JIRA_USERNAME:$JIRA_API_TOKEN | base64)" \
+          -H "Content-Type: application/json" \
+          -d '{ "transition": { "id": "'"$TRANSITION_ID"'" } }' \
+          "https://$JIRA_HOST/rest/api/2/issue/$ISSUE_KEY/transitions"
