--- a/.github/workflows/issuetranistion.yml
+++ b/.github/workflows/issuetranistion.yml
@@ -1,33 +1,31 @@
-name: issue transition
- 
-on:
-  push:
-    branches: [ "main" ]
- 
-  workflow_dispatch:
- 
+name: Transition Jira Issue
+
+on: [push]
+
 jobs:
-  build:
+  job1:
     runs-on: ubuntu-latest
- 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
- 
-      - name: Run a one-line script
-        run: echo Hello, world!
- 
-      - name: Transition Jira Issue to Done
-        if: github.event_name == 'push' && github.event.before == '0000000000000000000000000000000000000000' && success()
+      - name: Echo hello world
+        run: echo "hello world"
+      
+  job2:
+    runs-on: ubuntu-latest
+    needs: job1
+    if: success('job1')
+    steps:
+      - name: Transition Jira issue
         env:
-          JIRA_USERNAME: ${{ secrets.JIRA_EMAIL }}
+          JIRA_URL: ${{ secrets.JIRA_URL }}
+          JIRA_USERNAME: ${{ secrets.JIRA_USERNAME }}
           JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
-          JIRA_ISSUE_KEY: "TS-11"
-          JIRA_TRANSITION_ID: "21"
         run: |
-          curl -X POST \
-            -H "Accept: application/json" \
+          curl -X POST $JIRA_URL/rest/api/2/issue/TS-11/transitions \
+            -H 'Accept: application/json' \
             -u "$JIRA_USERNAME:$JIRA_API_TOKEN" \
-            -H "Content-Type: application/json" \
-            -d '{ "transition": { "id": "'"$JIRA_TRANSITION_ID"'" } }' \
-            "https://bhavyass.atlassian.net/rest/api/2/issue/$JIRA_ISSUE_KEY/transitions"
+            -H 'Content-Type: application/json' \
+            -d '{
+              "transition": {
+                "id": "31"
+              }
+            }'
